# watertest

./: .gitignore  CMakeLists.txt  README.md  build_debug.bat
cmake/: glad.cmake  glfw.cmake  glm.cmake  imgui.cmake  stb.cmake
src/: Application.h  Buffer.h  CMakeLists.txt  Camera.h  FileReader.h  Mesh.h  Planet.h  Program.h  Quad.h  Shader.h  Texture2D.h  UniformBuffer.h  VertexArrayObject.h  e_type.h  main.cpp
src/shaders/: default.frag  default.vert  planet.frag  planet.tesc  planet.tese  planet.vert
